name:                torscraper2
version:             0.1.0.0
synopsis:            torrent scraper written for a specific tracker
description:         Please see README.md
homepage:            https://github.com/justinwoo/torscraper2#readme
license:             MIT
license-file:        LICENSE
author:              Justin Woo
maintainer:          moomoowoo@gmail.com
copyright:           2016 Justin Woo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , transformers
                     , bytestring
                     , tagsoup
                     , process
                     , directory
                     , MissingH
  default-language:    Haskell2010

executable torscraper2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , torscraper2
                     , aeson
                     , transformers
                     , bytestring
                     , tagsoup
                     , process
                     , directory
                     , MissingH
  default-language:    Haskell2010

test-suite torscraper2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , torscraper2
                     , aeson
                     , transformers
                     , bytestring
                     , tagsoup
                     , process
                     , directory
                     , missingh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justinwoo/torscraper2
